tests/experimental/error/test_fail_to_assign_node_inputs.lus
node n(x,z:int) returns (y:int)
var t: int;
let
(x, t, z) = (0 -> x, 0 -> t, x);
tel;
